# cryptoauthlib

./: .travis.yml  appveyor.yml
lib/: CMakeLists.txt  atca_command.c  atca_command.h  atca_const.c  atca_const.h  atca_device.c  atca_device.h  atca_execution.c  atca_execution.h  atca_iface.c  atca_iface.h  atca_status.h
lib/atcacert/: atcacert_client.c  atcacert_client.h  atcacert_date.c  atcacert_date.h  atcacert_def.c  atcacert_def.h  atcacert_der.h  atcacert_host_hw.h
lib/basic/: atca_basic.c  atca_basic_aes.c  atca_basic_counter.c  atca_basic_ecdh.c  atca_basic_hmac.c  atca_basic_info.c  atca_basic_kdf.c  atca_basic_nonce.c  atca_basic_random.c  atca_basic_secureboot.c  atca_basic_sha.c  atca_basic_sign.c  atca_basic_verify.c  atca_helpers.c  atca_helpers.h
lib/hal/: hal_all_platforms_kit_hidapi.c  hal_all_platforms_kit_hidapi.h  hal_at90usb1287_i2c_asf.c  hal_freertos_timer.c  hal_i2c_bitbang.c  hal_linux_i2c_userspace.c  hal_linux_kit_cdc.c  hal_linux_kit_hid.c  hal_pic32mx695f512h_i2c.c  hal_pic32mx695f512h_i2c.h  hal_pic32mz2048efm_i2c.c  hal_sam4s_i2c_asf.c  hal_samb11_i2c_asf.c  hal_samd21_i2c_asf.c  hal_samd21_i2c_start.c  hal_samg55_i2c_asf.c  hal_samv71_i2c_asf.c  hal_swi_bitbang.c  hal_swi_uart.c  hal_win_kit_cdc.c  hal_win_kit_hid.c  hal_xmega_a3bu_i2c_asf.c  kit_protocol.c  swi_uart_at90usb1287_asf.c  swi_uart_samd21_asf.h  swi_uart_xmega_a3bu_asf.c
lib/host/: atca_host.h
lib/jwt/: atca_jwt.c
python/: MANIFEST.in  README.md  setup.py
python/cryptoauthlib/: atcab.py  atcacert.py  library.py
python/examples/: ECDH_example.py  get_info.py
python/tests/: cryptoauthlib_mock.py  test_atcab.py
